--- a/example/package.json
+++ b/example/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "expo": "^42.0.0",
     "expo-splash-screen": "~0.11.2",
     "react": "16.13.1",
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@babel/runtime": "^7.9.6",
+    "@react-native-community/async-storage": "^1.12.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-preset-expo": "8.3.0",
     "expo-cli": "^4.0.13"
